# madrona-vm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: modules.json
docs/: DEMO_CLI.md  DSP_MODULE_ARCHITECTURE.md  DSP_ROADMAP.md  EMBEDDED_CONSIDERATIONS.md  LOGGING_DESIGN.md  PARALLEL_AUDIO_ARCHITECTURE.md  PROJECT_SPEC.md  REALTIME_MODULAR_ARCHITECTURE.md  VM_DESIGN.md
examples/: a440.json  binaural.json  device_selection_demo.cpp  logging_demo.cpp  modulated_lowpass.json  phasor_phasing.json  phasor_to_trigger_to_adsr.json  simple_patch.json  simple_vm_demo.cpp  subtractive_synth.json
include/audio/: custom_audio_task.h  device_info.h
include/common/: embedded_logging.h
include/compiler/: compiler.h  module_registry.h
include/dsp/: add.h  adsr.h  audio_out.h  bandpass.h  biquad.h  float.h  gain.h  hipass.h  int.h  lopass.h  module.h  mul.h  osc_sine.h  phasor_gen.h  pulse_gen.h  saw_gen.h  sine_gen.h  sine_osc.h  threshold.h  validation.h  voice_controller.h
include/parser/: parser.h  patch_graph.h
include/ui/: device_selector.h
include/vm/: opcodes.h  vm.h
src/: main.cpp
src/audio/: custom_audio_task.cpp  device_info.cpp
src/common/: embedded_logging.cpp
src/compiler/: compiler.cpp  module_registry.cpp
src/dsp/: add.cpp  adsr.cpp  audio_out.cpp  bandpass.cpp  biquad.cpp  float.cpp  gain.cpp  hipass.cpp  int.cpp  lopass.cpp  module.cpp  mul.cpp  osc_sine.cpp  phasor_gen.cpp  pulse_gen.cpp  saw_gen.cpp  sine_gen.cpp  sine_osc.cpp  threshold.cpp  voice_controller.cpp
src/parser/: parser.cpp
src/ui/: device_selector.cpp
src/vm/: vm.cpp
tests/: end_to_end_test.cpp  integration_test.cpp  test_vm.cpp
tests/compiler/: compiler_test.cpp
tests/dsp/: adsr_test.cpp  gain_test.cpp  math_modules_test.cpp  osc_sine_test.cpp  sine_gen_test.cpp  sine_osc_test.cpp  voice_controller_test.cpp
tests/integration/: integration_test.cpp  vm_adsr_test.cpp  vm_math_modules_test.cpp  vm_test.cpp
tests/unit/common/: embedded_logging_test.cpp
tests/unit/compiler/: compiler_test.cpp
tests/unit/dsp/: bandpass_test.cpp  biquad_test.cpp  hipass_test.cpp  lopass_test.cpp  phasor_gen_test.cpp  pulse_gen_test.cpp  saw_gen_test.cpp  threshold_test.cpp  voice_controller_test.cpp
tests/unit/parser/: parser_test.cpp
